[build-system]
requires = [
  "setuptools >= 80.0",
  "wheel ~= 0.45",
  "pyTooling ~= 8.8"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']  # , 'py314']

[tool.mypy]
files = ["pyGHDL"]
python_version = "3.14"
#ignore_missing_imports = true
strict = true
pretty = true
show_error_context = true
show_error_codes = true
namespace_packages = true
html_report = "report/typing/html"

[tool.pytest]
addopts = ["--tb=native"]
# Don't set 'python_classes = *' otherwise, pytest doesn't search for classes
# derived from unittest.Testcase
python_files = ["*"]
python_functions = ["test_*"]
filterwarnings = [
	"error::DeprecationWarning",
	"error::PendingDeprecationWarning"
]
junit_xml = "report/unit/UnittestReportSummary.xml"
junit_logging = "all"

[tool.pyedaa-reports]
junit_xml = "report/unit/unittest.xml"

[tool.interrogate]
color = true
verbose = 1             # possible values: 0 (minimal output), 1 (-v), 2 (-vv)
fail-under = 59
exclude = [
	"build",
	"dist",
	"doc",
	"testsuite",
	"setup.py"
]
ignore-setters = true

[tool.coverage.run]
branch = true
relative_files = true
omit = [
	"*site-packages*",
	"setup.py",
	"testsuite/pyunit/*"
]

[tool.coverage.report]
skip_covered = false
skip_empty = true
exclude_lines = [
	"pragma: no cover",
	"raise NotImplementedError"
]
omit = [
	"tests/*"
]

[tool.coverage.xml]
output = "report/coverage/coverage.xml"

[tool.coverage.json]
output = "report/coverage/coverage.json"

[tool.coverage.html]
directory = "report/coverage/html"
title="Code Coverage of pyGHDL"
